@@ -52,7 +52,6 @@
 
 #include "flash.h"
 
-#include <cyg/hal/hal_cache.h>
 
 //
 // CAUTION!  This code must be copied to RAM before execution.  Therefore,
@@ -65,15 +64,8 @@ flash_lock_block(volatile unsigned char *block)
     volatile unsigned char *ROM;
     unsigned short stat;
     int timeout = 5000000;
-    int cache_on;
 
     ROM = FLASH_P2V((unsigned long)block & 0xFF800000);
-
-    HAL_DCACHE_IS_ENABLED(cache_on);
-    if (cache_on) {
-        HAL_DCACHE_SYNC();
-        HAL_DCACHE_DISABLE();
-    }
 
     // Clear any error conditions
     ROM[0] = FLASH_Clear_Status;
@@ -87,10 +79,6 @@ flash_lock_block(volatile unsigned char *block)
 
     // Restore ROM to "normal" mode
     ROM[0] = FLASH_Reset;
-
-    if (cache_on) {
-        HAL_DCACHE_ENABLE();
-    }
 
     return stat;
 }
