@@ -1,3 +1,12 @@
+2002-04-04  Jani Monoses <jani@iv.ro>
+
+	* src/flash_lock_block.c (flash_lock_block): 
+	* src/flash_unlock_block.c (flash_unlock_block): 
+	* src/flash_erase_block.c (flash_erase_block): 
+	* src/flash_query.c (flash_query): 
+	* src/flash_program_buf.c (flash_program_buf): 
+	Cache enabling and disabling are already handled by generic flash
+
 2002-11-12  Gary Thomas  <gary@mlbassoc.com>
 
 	* cdl/flash_iq80310.cdl: New Xscale platforms layout.
